# user/model/user.go
@@ -1,4 +1,4 @@
-package user
+package model
 
 import (
 	"github.com/smartwalle/errors"
@@ -15,11 +15,4 @@ type User struct {
 	Username  string `sql:"username"`   // 用户名
 	LastName  string `sql:"last_name"`  // 姓
 	FirstName string `sql:"first_name"` // 名
-}
-
-// AddUserOption service 或者 repository 方法参数过多时，可以考虑使用结构体组织
-type AddUserOption struct {
-	Username  string // 用户名
-	LastName  string // 姓
-	FirstName string // 名
 }
