# user/swagger/swagger.json
@@ -34,7 +34,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/http.UserRsp"
+                                            "$ref": "#/definitions/http.GetUserRsp"
                                         }
                                     }
                                 }
@@ -78,7 +78,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/http.UserRsp"
+                                            "$ref": "#/definitions/http.GetUserRsp"
                                         }
                                     }
                                 }
@@ -122,7 +122,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/http.UserRsp"
+                                            "$ref": "#/definitions/http.AddUserRsp"
                                         }
                                     }
                                 }
@@ -151,23 +151,7 @@
                 }
             }
         },
-        "http.Response": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "description": "错误码",
-                    "type": "integer"
-                },
-                "data": {
-                    "description": "数据"
-                },
-                "message": {
-                    "description": "错误消息",
-                    "type": "string"
-                }
-            }
-        },
-        "http.UserRsp": {
+        "http.AddUserRsp": {
             "type": "object",
             "properties": {
                 "first_name": {
@@ -184,6 +168,43 @@
                 },
                 "username": {
                     "description": "用户名",
+                    "type": "string"
+                }
+            }
+        },
+        "http.GetUserRsp": {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "description": "名",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "last_name": {
+                    "description": "姓",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                }
+            }
+        },
+        "http.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "错误码",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "数据"
+                },
+                "message": {
+                    "description": "错误消息",
                     "type": "string"
                 }
             }
